footer discription added

--- a/App/Views/base.html
+++ b/App/Views/base.html
@@ -245,9 +245,10 @@
             <!-- Section: Text -->
             <section class="mb-4">
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt distinctio earum
-                    repellat quaerat voluptatibus placeat nam, commodi optio pariatur est quia magnam
-                    eum harum corrupti dicta, aliquam sequi voluptate quas.
+                    It's a page developed and designed by CSIT students of birendra multiple campus. This page was developed inorder to help students and general people to rise financial and other help to needed one.
+                    <br> Students can post their startup ideas their details for invester to attract so that they need not to scramble here and there for invester. Students can find lots of invester in
+                    our page who can invest on you if your startup plan is really good. <br>
+                    General public can post their emmergency help post so that anyone near them can help them.
                 </p>
             </section>
             <!-- Section: Text -->
@@ -255,23 +256,23 @@
             <!-- Section: Links -->
             <section class="">
                 <!--Grid row-->
-                <div class="row" style="justify-content: center; text-align: center;">
+                <div class="row" style="justify-content: center; text-align: left;">
                     <!--Grid column-->
                     <div class="col">
-                        <h5 class="text-uppercase">Links</h5>
+                        <h4 class="text-uppercase">Products</h4>
 
                         <ul class="list-unstyled mb-0">
                             <li>
-                                <a href="#!" class="logbtn">Link 1</a>
+                                <a href="/" class="logbtn btn m-1 p-1">Ins Group</a>
                             </li>
                             <li>
-                                <a href="#!" class="logbtn">Link 2</a>
+                                <a href="#!" class="logbtn btn m-1 p-1">web Design</a>
                             </li>
                             <li>
-                                <a href="#!" class="logbtn">Link 3</a>
+                                <a href="#!" class="logbtn btn m-1 p-1">Web Hosting</a>
                             </li>
                             <li>
-                                <a href="#!" class="logbtn">Link 4</a>
+                                <a href="#!" class="logbtn btn m-1 p-1">Marketing</a>
                             </li>
                         </ul>
                     </div>
@@ -279,20 +280,20 @@
 
                     <!--Grid column-->
                     <div class="col">
-                        <h5 class="text-uppercase">Links</h5>
+                        <h4 class="text-uppercase">Company</h4>
 
                         <ul class="list-unstyled mb-0">
                             <li>
-                                <a href="#!" class="logbtn">Link 1</a>
+                                <a href="#!" class="logbtn btn m-1 p-1">Our Blogs</a>
                             </li>
                             <li>
-                                <a href="#!" class="logbtn">Link 2</a>
+                                <a href="/" class="logbtn btn m-1 p-1">About us</a>
                             </li>
                             <li>
-                                <a href="#!" class="logbtn">Link 3</a>
+                                <a href="#!" class="logbtn btn m-1 p-1">Terms &amp; Conditions</a>
                             </li>
                             <li>
-                                <a href="#!" class="logbtn">Link 4</a>
+                                <a href="#!" class="logbtn btn m-1 p-1">Privacy Policy</a>
                             </li>
                         </ul>
                     </div>
@@ -300,20 +301,20 @@
 
                     <!--Grid column-->
                     <div class="col">
-                        <h5 class="text-uppercase">Links</h5>
+                        <h4 class="text-uppercase">Supports</h4>
 
                         <ul class="list-unstyled mb-0">
                             <li>
-                                <a href="#!" class="logbtn">Link 1</a>
+                                <a href="#!" class="logbtn btn m-1 p-1">Resources</a>
                             </li>
                             <li>
-                                <a href="#!" class="logbtn">Link 2</a>
+                                <a href="#!" class="logbtn btn m-1 p-1">FAQ</a>
                             </li>
                             <li>
-                                <a href="#!" class="logbtn">Link 3</a>
+                                <a href="#!" class="logbtn btn m-1 p-1">Forget Password</a>
                             </li>
                             <li>
-                                <a href="#!" class="logbtn">Link 4</a>
+                                <a href="#!" class="logbtn btn m-1 p-1">Web Resources</a>
                             </li>
                         </ul>
                     </div>
@@ -321,20 +322,24 @@
 
                     <!--Grid column-->
                     <div class="col">
-                        <h5 class="text-uppercase">Links</h5>
+                        <h5 class="text-uppercase">Contacts</h5>
 
                         <ul class="list-unstyled mb-0">
                             <li>
-                                <a href="#!" class="logbtn">Link 1</a>
+                                +977 9865874621
+                                {# <a href="#!" class="logbtn"></a> #}
                             </li>
                             <li>
-                                <a href="#!" class="logbtn">Link 2</a>
+                               +977 056 564894
+                                {# <a href="#!" class="logbtn">Link 2</a> #}
                             </li>
                             <li>
-                                <a href="#!" class="logbtn">Link 3</a>
+                                Email : insgroup@gmail.com
+                                {# <a href="#!" class="logbtn">Link 3</a> #}
                             </li>
                             <li>
-                                <a href="#!" class="logbtn">Link 4</a>
+                                location : Chitwan
+                                {# <a href="#!" class="logbtn">Link 4</a> #}
                             </li>
                         </ul>
                     </div>
