--- a/App/Views/post/new.html
+++ b/App/Views/post/new.html
@@ -46,8 +46,8 @@
                 required type="text" class="form-control" ></textarea>
             </div>        
             
-            <button type="submit" class="btn btn-defult">Publish post</button>
-            
+            <button type="submit" class="btn logbtn m-1">Publish post</button>
+            <a class="btn logbtn m-1" href="/post/show">Cancle</a>
         </form>
         
     </div>
