--- a/App/Views/Profile/visit.html
+++ b/App/Views/Profile/visit.html
@@ -15,12 +15,19 @@
             </div>
             <dl class="px-4 py-2">
                 <dt>Name</dt>
-                <dd>{{ user.name }}</dd>
+                <dd>
+                    {{ user.name }}
+                </dd>
                 <dt>email</dt>
                 <dd>{{ user.email }}</dd>
                 <dt>Signup Category</dt>
                 {% if user.catogery == "Signup as student" %}
-                <dd>Student</dd>
+                <dd>
+                    {% if user.name == "Basanta Sharma gyawali" %}
+                    Pro
+                    {% endif %}
+                    Student
+                </dd>
                 {% else %}
                 <dd>Invester</dd>
                 {% endif %}
