--- a/App/Views/post/index.html
+++ b/App/Views/post/index.html
@@ -44,6 +44,9 @@
                                 <h3 class="card-title">{{ details.title }}</h3>
                                 <p class="card-text">{{ details.discription }}</p>
                             </div>
+                            {% if details.user_id != current_user.id %}
+                            <div class="card-footer"><a class="btn logbtn" href="#">Help</a></div>
+                            {% endif %}
                         </div>
                     {% endif %}
                     
@@ -61,6 +64,9 @@
                                 <h3 class="card-title">{{ details.title }}</h3>
                                 <p class="card-text">{{ details.discription }}</p>
                             </div>
+                            {% if details.user_id != current_user.id %}
+                            <div class="card-footer"><a class="btn logbtn" href="#">Interested</a></div>
+                            {% endif %}
                             <!-- <button type="submit">Help</button> -->
                         </div>
                     {% endif %}
@@ -79,6 +85,9 @@
                                 <h3 class="card-title">{{ details.title }}</h3>
                                 <p class="card-text">{{ details.discription }}</p>
                             </div>
+                            {% if details.user_id != current_user.id %}
+                            <div class="card-footer"><a class="btn logbtn" href="#">Interested</a></div>
+                            {% endif %}
                             <!-- <button type="submit">Help</button> -->
                         </div>
                     {% endif %}
@@ -96,6 +105,9 @@
                                 <h3 class="card-title">{{ details.title }}</h3>
                                 <p class="card-text">{{ details.discription }}</p>
                             </div>
+                            {% if details.user_id != current_user.id %}
+                            <div class="card-footer"><a class="btn logbtn" href="#">Interested</a></div>
+                            {% endif %}
                         </div>
                     {% endif %}
                 {% endfor %}
