--- a/App/Views/Profile/show.html
+++ b/App/Views/Profile/show.html
@@ -22,7 +22,7 @@
                 {% if user.catogery == "Signup as student" %}
                 <dd>
                     {% if user.name == "Basanta Sharma gyawali" %}
-                    Pro
+                    <i style="color: white;">Pro</i> 
                     {% endif %}
                     Student
                 </dd>
