--- a/App/Views/base.html
+++ b/App/Views/base.html
@@ -29,6 +29,10 @@
             color: orange;
         }
 
+        .bg-orange {
+            color: black;
+            background-color: orange;            
+        }
         .sbtn {
             background-color: #ffc107;
             color: black;
@@ -93,10 +97,12 @@
 
 <body class="bg-dark text-warning" style="margin: 0px;">
     <!-- <div class=""> -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-warning">
+    <nav class="navbar navbar-expand-lg navbar-light bg-orange">
         <div class="container-fluid">
             <div class="navbar-brand">
-                <a class="btn logbtn" href="/post/show">INS G.</a>
+                {# {{ current_user.name }} #}
+                {# <a class="btn logbtn" href={% if current_user %} "/post/show"  {% else %} "/post/emergency" {% endif %}>INS G.</a> #}
+                <a class="btn logbtn" href={{  current_user ? "/post/show" : "/post/emergency" }}>INS G.</a>
             </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
                 aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
@@ -115,12 +121,12 @@
                     <li class="nav-item">
                         <a class=" btn logbtn me-2" href="/">About Us</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="btn logbtn me-2" href="/post/emergency" style="border-color: orangered;">Emergency</a>
+                    </li>
                     {% if current_user %}
                     <li class="nav-item">
-                        <a class="btn logbtn me-2" href="/post/emergency">Emergency</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="btn logbtn me-2" href="/post/general">General</a>
+                        <a class="btn logbtn me-2" href="/post/general" style="border-color: palegreen;">General</a>
                     </li>
                     {% endif %}
                 </ul>
@@ -151,11 +157,12 @@
     </div>
     {% endfor %}
 
-    <div class="" style="max-width: 1024px; margin:0 auto; min-height:300px;"> {% block body %}{% endblock %}
+    <div class="" style="max-width: 1024px; margin:0 auto; min-height:300px;"> 
+        {% block body %}{% endblock %}
     </div>
 
     <!-- Footer -->
-    <footer class="bg-warning text-center text-dark">
+    <footer class="bg-orange text-center text-dark">
         <!-- Grid container -->
         <div class="container p-4">
             <!-- Section: Social media -->
